--- a/index.html
+++ b/index.html
@@ -147,10 +147,11 @@
                          <h1>Subscribe Newsletter</h1>
                          <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
                     </div>
-                    <div>
+                    <div class="subscribe-inout">
                         <input type="email" placeholder="Enter your email here">
-                        <button class="btn-2">Subscribe</button>
+                        <button class="btn-5">Subscribe</button>
                     </div>
+                    <p>We promise not to spam you!</p>
                 </div>
             </section>
     </main>
