--- a/index.html
+++ b/index.html
@@ -147,9 +147,13 @@
                          <h1>Subscribe Newsletter</h1>
                          <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
                     </div>
-                    <div class="subscribe-inout">
-                        <input type="email" placeholder="Enter your email here">
-                        <button class="btn-5">Subscribe</button>
+                    <div class="subscribe-input">
+                        <div>
+                            <input type="email" placeholder="Enter your email here">
+                        </div>
+                        <div>
+                            <button class="btn-5">Subscribe</button>
+                        </div>
                     </div>
                     <p>We promise not to spam you!</p>
                 </div>
