--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
                 </div>
             </div>
          </section>
+         <!-- dr muhammad section -->
+          <section>
+            <div class="text">
+jhhjkhkhkjhhkj
+            </div>
+          </section>
          <!-- recent news section -->
           <section>
             <div class="recent"> 
