--- a/index.html
+++ b/index.html
@@ -59,8 +59,14 @@
          </section>
          <!-- dr muhammad section -->
           <section>
-            <div class="text">
-jhhjkhkhkjhhkj
+            <div class="adviser">
+             <div class="back-img">
+                <div>
+                    <p>Muhammad Yunus is a Bangladeshi economist, entrepreneur, politician, and civil society leader, who has been serving as Chief Adviser of the Interim Government of Bangladesh since 8 August 2024.Professor Muhammad Yunus established the Grameen Bank in Bangladesh in 1983, fueled by the belief that credit is a fundamental human right. His objective was to help poor people escape from poverty by providing loans on terms suitable to them and by teaching them a few sound financial principles so they could help themselves.From Dr. Yunus’ personal loan of small amounts of money to destitute basketweavers in Bangladesh in the mid-70s, the Grameen Bank has advanced to the forefront of a burgeoning world movement toward eradicating poverty through microlending. Replicas of the Grameen Bank model operate in more than 100 countries worldwide.</p>
+                    <h4>Dr. Muhammad Yunus</h4>
+                    <p>Chief Adviser of the People's Republic of Bangladesh</p>
+                </div>
+             </div>
             </div>
           </section>
          <!-- recent news section -->
