--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vission Bangladesh</title>
+    <title>Vission Bangladesh 2</title>
     <!-- css link add here -->
      <link rel="stylesheet" href="style.css">
 </head>
@@ -17,7 +17,7 @@
                 <p>Bangladesh 2.0</p>
                     <h1>Idea , innovation ,<br>
                         vision and challenges in  New Bangladesh.</h1>
-                        <button class="btn">Explore New Bangladesh</button>
+                        <button class="btn button">Explore New Bangladesh</button>
                 </div>
                 <div>
                     <img src="assets/hero.png" alt="">
@@ -36,7 +36,7 @@
                         <h1>Digital Transformation</h1>
                         <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
                     </div>
-                    <button class="btn-1">Learn More</button>
+                    <button class="btn-1 button">Learn More</button>
                     </div>
                     <div class="box-2">
                         <img src="assets/card-icon.png" alt="">
@@ -44,7 +44,7 @@
                             <h1>Green Energy</h1>
                             <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
                         </div>
-                        <button class="btn-2">Learn More</button>
+                        <button class="btn-2 button">Learn More</button>
                         </div>
                         <div class="box-3">
                             <img src="assets/card-icon.png" alt="">
@@ -52,7 +52,7 @@
                                 <h1>Modern Infrastructure</h1>
                                 <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
                             </div>
-                            <button class="btn-3">Learn More</button>
+                            <button class="btn-3 button">Learn More</button>
                             </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                         </div>
                         <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
                             with a certain degree of justification, be able to speak of humankind as civilized</p>
-                            <butto class="btn-2">Read More</button>
+                            <butto class="btn-2 button">Read More</button>
                     </div>
                 </div>
                 <div class="card-body-1">
@@ -110,7 +110,7 @@
                         </div>
                         <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
                             with a certain degree of justification, be able to speak of humankind as civilized</p>
-                            <butto class="btn-2">Read More</button>
+                            <butto class="btn-2 button">Read More</button>
                     </div>
                 </div>
                 <div class="card-body">
@@ -128,7 +128,7 @@
                         </div>
                         <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
                             with a certain degree of justification, be able to speak of humankind as civilized</p>
-                            <butto class="btn-2">Read More</button>
+                            <butto class="btn-2 button">Read More</button>
                     </div>
                 </div>
              </div>
@@ -148,7 +148,7 @@
                 </div>
                 <div>  <input type="text" placeholder="Other Amount (Taka)"></div>
               
-                <button class="btn-2">Done Now</button>
+                <button class="btn-2 button">Done Now</button>
               </div>
             </div>
            </section>
